Update github link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   
         <ul class="nav nav-pills">
           <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="https://github.com/Cody-Keasling-LAS1DA" class="nav-link">Github</a></li>
+          <li class="nav-item"><a href="https://github.com/c-keasling" class="nav-link">Github</a></li>
           <li class="nav-item"><a href="./resume.html" class="nav-link">Resume</a></li>
           <li class="nav-item"><a href="contact-us.html" class="nav-link">Contact Me</a></li>
         </ul>
